k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculadora-service
  namespace: laboratorio
  labels:
    app: calculadora-saveincloud
spec:
  type: ClusterIP
  selector:
    app: calculadora-saveincloud
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
